[package]
name = "decommission-demo-message-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
uuid = { version = "1.8", features = ["v4"]}
serde_json = "1.0.115"
chrono = "0.4.37"
axum = "0.7.5"
