[package]
name = "account-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "account_demo"  # Your main application
path = "src/main.rs"

[[bin]]
name = "inject_messages"  # The message injector
path = "src/bin/inject_messages.rs"

[dependencies]
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
uuid = { version = "1.8", features = ["v4"]}
serde_json = "1.0.115"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7.5"
serde = "1.0.199"
